--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/styled-components": "^5.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hot-loader": "^4.12.21",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
@@ -46,7 +47,8 @@
   },
   "babel": {
     "plugins": [
-      "babel-plugin-styled-components"
+      "babel-plugin-styled-components",
+      "react-hot-loader/babel"
     ]
   }
 }
