--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,20 @@
-# dependencies
+#front-end
 /client/node_modules
 /client/.pnp
 /client/.pnp.js
-
-# testing
 /client/coverage
-
-# production
 /client/build
-
-# misc
 /client/.DS_Store
 /client/.env.local
 /client/.env.development.local
 /client/.env.test.local
 /client/.env.production.local
-
 /client/npm-debug.log*
 /client/yarn-debug.log*
 /client/yarn-error.log*
+
+#back-end
+/server/.vs
+/server/bin
+/server/obj
+/server/server.sln
