--- a/client/package.json
+++ b/client/package.json
@@ -16,14 +16,15 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.1",
     "chart.js": "^2.9.3",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "rsuite": "^4.8.0",
+    "react-scripts": "^3.4.3",
+    "react-toastify": "^6.0.8",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.7"
   },
