fix dashboard line chart data ordering issue (use time chart now), add and integrate chart.js types

--- a/client/package.json
+++ b/client/package.json
@@ -55,5 +55,8 @@
       "react-hot-loader/babel"
     ]
   },
-  "proxy": "https://localhost:6000"
+  "proxy": "https://localhost:6000",
+  "devDependencies": {
+    "@types/chart.js": "^2.9.29"
+  }
 }
