--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "bugtracker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://japraj.github.io/bugtracker",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
@@ -32,7 +33,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -57,6 +60,7 @@
   },
   "proxy": "https://localhost:6000",
   "devDependencies": {
-    "@types/chart.js": "^2.9.29"
+    "@types/chart.js": "^2.9.29",
+    "gh-pages": "^3.1.0"
   }
 }
